<?xml version="1.0"?>
<package format="2">
  <name>tf_relay</name>
  <version>0.0.0</version>
  <description>The tf_proxy package</description>

  <maintainer email="sktometometo@gmail.com">sktometometo</maintainer>
  <author email="sktometometo@gmail.com">sktometometo</author>

  <license>BSD</license>


  <build_depend>boost</build_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
